project('druntime', ['d', 'c'])

phobos_dep = declare_dependency(
    include_directories: ['/usr/include/dmd/phobos/']
)

src = [
    #'src/core/internal/entrypoint.d',
    'src/core/bitop.d',
    'src/core/cpuid.d',
    'src/core/gc/config.d',
    'src/core/gc/gcinterface.d',
    'src/core/gc/registry.d',
    'src/core/demangle.d',
    'src/core/exception.d',
    'src/core/internal/abort.d',
    'src/core/internal/array/capacity.d',
    'src/core/internal/array/equality.d',
    'src/core/internal/array/utils.d',
    'src/core/internal/parseoptions.d',
    'src/core/internal/spinlock.d',
    'src/core/internal/string.d',
    'src/core/internal/traits.d',
    'src/core/internal/util/array.d',
    'src/core/runtime.d',
    'src/core/memory.d',
    'src/core/sync/event.d',
    'src/core/time.d',
    'src/core/thread/fiber.d',
    'src/core/thread/osthread.d',
    'src/core/thread/package.d',
    'src/core/stdc/errno.d',
    'src/gc/bits.d',
    'src/gc/impl/conservative/gc.d',
    'src/gc/impl/manual/gc.d',
    'src/gc/impl/proto/gc.d',
    'src/gc/os.d',
    'src/gc/proxy.d',
    'src/object.d',
    'src/rt/aaA.d',
    'src/rt/arraycat.d',
    'src/rt/cast_.d',
    'src/rt/config.d',
    'src/rt/critical_.d',
    'src/rt/deh.d',
    'src/rt/deh_win64_posix.d',
    'src/rt/dmain2.d',
    'src/rt/dwarfeh.d',
    'src/rt/ehalloc.d',
    'src/rt/invariant.d',
    'src/rt/lifetime.d',   
    'src/rt/memory.d',
    'src/rt/minfo.d',
    'src/rt/monitor_.d',
    'src/rt/profilegc.d',
    'src/rt/tlsgc.d',
    'src/rt/unwind.d',
    'src/rt/util/container/common.d',
    'src/rt/util/random.d',
    'src/rt/sections.d',
    'src/rt/sections_android.d',
    'src/rt/sections_elf_shared.d',
    'src/rt/sections_ldc.d',
    'src/rt/sections_osx_x86.d',
]

typeinfo_files = [
    'src/rt/typeinfo/ti_Acdouble.d',
    'src/rt/typeinfo/ti_Acfloat.d',
    'src/rt/typeinfo/ti_Acreal.d',
    'src/rt/typeinfo/ti_Adouble.d',
    'src/rt/typeinfo/ti_Afloat.d',
    'src/rt/typeinfo/ti_Ag.d',
    'src/rt/typeinfo/ti_Aint.d',
    'src/rt/typeinfo/ti_Along.d',
    'src/rt/typeinfo/ti_Areal.d',
    'src/rt/typeinfo/ti_Ashort.d',
    'src/rt/typeinfo/ti_byte.d',
    'src/rt/typeinfo/ti_C.d',
    'src/rt/typeinfo/ti_cdouble.d',
    'src/rt/typeinfo/ti_cent.d',
    'src/rt/typeinfo/ti_cfloat.d',
    'src/rt/typeinfo/ti_char.d',
    'src/rt/typeinfo/ti_creal.d',
    'src/rt/typeinfo/ti_dchar.d',
    'src/rt/typeinfo/ti_delegate.d',
    'src/rt/typeinfo/ti_double.d',
    'src/rt/typeinfo/ti_float.d',
    'src/rt/typeinfo/ti_idouble.d',
    'src/rt/typeinfo/ti_ifloat.d',
    'src/rt/typeinfo/ti_int.d',
    'src/rt/typeinfo/ti_ireal.d',
    'src/rt/typeinfo/ti_long.d',
    'src/rt/typeinfo/ti_n.d',
    'src/rt/typeinfo/ti_ptr.d',
    'src/rt/typeinfo/ti_real.d',
    'src/rt/typeinfo/ti_short.d',
    'src/rt/typeinfo/ti_ubyte.d',
    'src/rt/typeinfo/ti_ucent.d',
    'src/rt/typeinfo/ti_uint.d',
    'src/rt/typeinfo/ti_ulong.d',
    'src/rt/typeinfo/ti_ushort.d',
    'src/rt/typeinfo/ti_void.d',
    'src/rt/typeinfo/ti_wchar.d'
]

ldc_specific = [
    'src/rt/sections_ldc.d',
]

ldc_c_lib = library(
    'LDC C RT library',
    [
        'src/ldc/arm_unwind.c',
    ],
    #include_directories: ['source', 'source/bindings'],
    #link_with: druntime_lib,
)

druntime_dep = declare_dependency(
    sources: [src, typeinfo_files, ldc_specific],
    include_directories: include_directories('src'),
    dependencies: [ phobos_dep ],
    link_with: ldc_c_lib,
)
